--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>A travel philosophy</h1>
+        		<h1>Chairs or benches</h1>
 			<p>To sit on chairs or benches is the only worry.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
